# Teaching-Agent

./: .gitignore  .pre-commit-config.yaml  README.md  linear_algebra_app.db  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg
app-be/models/: db_models.py  schemas.py
app-be/textbooks/: linear_algebra_content.csv  linear_algebra_topics.csv
app_be/: main.py
app_be/api/: content.py  quiz.py  users.py
app_be/database/: db.py  db_setup.py
app_be/models/: db_models.py  schemas.py
app_be/services/: content_service.py  llm_service.py  progress_service.py  security.py  user_service.py
app_be/textbooks/: linear_algebra_content.csv  linear_algebra_topics.csv
