[tool.poetry]
name = "teaching-agent"
version = "0.1.0"
description = ""
authors = [
    "NotAlvin <62137771+NotAlvin@users.noreply.github.com>"
]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<4.0"
fastapi = ">=0.115.12,<0.116.0"
pandas = ">=2.2.3,<3.0.0"
pydantic = {extras = ["email"], version = "^2.11.3"}
sqlalchemy = ">=2.0.40,<3.0.0"
uvicorn = ">=0.34.2,<0.35.0"
sqlalchemy2-stubs = "^0.0.2a38"
passlib = "^1.7.4"
pyjwt = "^2.10.1"
dotenv = "^0.9.9"
bcrypt = "^4.3.0"
pydantic-ai = "^0.1.9"
json-repair = "^0.44.1"
tenacity = "^9.1.2"


[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
isort = "^6.0.1"
mypy = "^1.15.0"
pre-commit = "^4.2.0"
flake8 = "^7.2.0"

[tool.black]
line-length = 88
target-version = ['py38']

[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3
include_trailing_comma = true

[tool.mypy]
plugins = ["pydantic.mypy"]
check_untyped_defs = true
disallow_untyped_defs = true
ignore_missing_imports = true
strict = true

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
